MDEV-5582: Plugin 'MEMORY' has ref_count=1 after shutdown with materialization+semijoin - Let cleanup_empty_jtbm_semi_joins() walk into semi-join nests.