sql/opt_subselect.cc
@@ -5234,9 +5234,9 @@ bool setup_jtbm_semi_joins(JOIN *join, List<TABLE_LIST> *join_list,
   through Item::cleanup() calls).
 */
 
-void cleanup_empty_jtbm_semi_joins(JOIN *join)
+void cleanup_empty_jtbm_semi_joins(JOIN *join, List<TABLE_LIST> *join_list)
 {
-  List_iterator<TABLE_LIST> li(*join->join_list);
+  List_iterator<TABLE_LIST> li(*join_list);
   TABLE_LIST *table;
   while ((table= li++))
   {
@@ -5247,6 +5247,10 @@ void cleanup_empty_jtbm_semi_joins(JOIN *join)
         free_tmp_table(join->thd, table->table);
         table->table= NULL;
       }
+    }
+    else if (table->nested_join && table->sj_subq_pred)
+    {
+      cleanup_empty_jtbm_semi_joins(join, &table->nested_join->join_list);
     }
   }
 }
